fix: css overflow level

--- a/client/src/components/routes/play/header/TeamProfile.css
+++ b/client/src/components/routes/play/header/TeamProfile.css
@@ -43,6 +43,8 @@
 }
 
 #team-profile .progress-bar {
+	overflow: hidden;
+    border-radius: 99999px;
 	position: relative;
 	width: 100%;
 	height: 30px;
